src/features/todo.css
* {
  box-sizing: border-box;
}

body {
  background-color: #0A0B0F;
}

#root {
  border: 1px solid transparent;
}

.container {
  min-width: 500px;
  width: 30vw;
  margin: 10vh auto;
}

.title {
  color: #fefefe;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 10px 0;
}
.title > div {
  font-size: 32px;
  font-weight: bold;
}

.todo-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 4px 18px;
  border: 1px solid transparent;
  transition: all 0.2s;
}
.todo-container:hover {
  border: 1px solid #146262;
  border-radius: 3px;
  transform: translate(0, -1px);
}

.taskname {
  color: #fefefe;
  font-size: 20px;
  margin: 16px;
  flex: 1;
}
.taskname-done {
  color: #888;
  font-size: 20px;
  margin: 16px;
  flex: 1;
  text-decoration: line-through;
}

.filter-menu {
  position: relative;
  display: inline-block;
  left: 105%;
}

